--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
+  <h1>crazydrunkman</h1>
+  <p>The website with the good stuff</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
